Changed site title

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Hugo Cards</title>
+<title>Psychological Health And Methods</title>
 <meta name="description" content=""/>
 <meta name="robots" content="noodp"/>
 <link rel="canonical" href="/" />
@@ -15,16 +15,16 @@
 
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="" />
-<meta name="twitter:title" content="Hugo Cards - " />
+<meta name="twitter:title" content="Psychological Health And Methods - " />
 <meta name="twitter:site" content="http://twitter.com/bul_ikana" />
 <meta name="twitter:creator" content="http://twitter.com/bul_ikana" />
 
 
 <meta property="og:type" content="website" />
-<meta content="Hugo Cards - " property="og:title">
+<meta content="Psychological Health And Methods - " property="og:title">
 <meta content="" property="og:description">
 <meta property="og:url" content="/" />
-<meta property="og:site_name" content="Hugo Cards" />
+<meta property="og:site_name" content="Psychological Health And Methods" />
 
 
 
@@ -35,7 +35,7 @@
   "@context": "http://schema.org", 
   "@type": "WebSite", 
   "url": "\/", 
-  "name": "Hugo Cards",
+  "name": "Psychological Health And Methods",
    "author": {
       "@type": "Person",
       "name": ""
@@ -67,7 +67,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Hugo Cards</a>
+      <a class="navbar-brand" href="/">Psychological Health And Methods</a>
     </div>
 
     
