--- a/public/pages/contact/index.html
+++ b/public/pages/contact/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Contact - Hugo Cards</title>
+<title>Contact - Psychological Health And Methods</title>
 <meta name="description" content="Visit my site
 Insert your contact details or a contact form here."/>
 <meta name="robots" content="noodp"/>
@@ -16,17 +16,17 @@ Insert your contact details or a contact form here."/>
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="Visit my site
 Insert your contact details or a contact form here." />
-<meta name="twitter:title" content="Contact - Hugo Cards" />
+<meta name="twitter:title" content="Contact - Psychological Health And Methods" />
 <meta name="twitter:site" content="http://twitter.com/bul_ikana" />
 <meta name="twitter:creator" content="http://twitter.com/bul_ikana" />
 
 
 <meta property="og:type" content="article" />
-<meta content="Contact - Hugo Cards" property="og:title">
+<meta content="Contact - Psychological Health And Methods" property="og:title">
 <meta content="Visit my site
 Insert your contact details or a contact form here." property="og:description">
 <meta property="og:url" content="/pages/contact/" />
-<meta property="og:site_name" content="Hugo Cards" />
+<meta property="og:site_name" content="Psychological Health And Methods" />
 
 
 
@@ -71,7 +71,7 @@ Insert your contact details or a contact form here." property="og:description">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Hugo Cards</a>
+      <a class="navbar-brand" href="/">Psychological Health And Methods</a>
     </div>
 
     
