--- a/public/methods/index.html
+++ b/public/methods/index.html
@@ -14,16 +14,16 @@
 
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="" />
-<meta name="twitter:title" content="Methods - Hugo Cards" />
+<meta name="twitter:title" content="Methods - Psychological Health And Methods" />
 <meta name="twitter:site" content="http://twitter.com/bul_ikana" />
 <meta name="twitter:creator" content="http://twitter.com/bul_ikana" />
 
 
 <meta property="og:type" content="website" />
-<meta content="Methods - Hugo Cards" property="og:title">
+<meta content="Methods - Psychological Health And Methods" property="og:title">
 <meta content="" property="og:description">
 <meta property="og:url" content="/methods/" />
-<meta property="og:site_name" content="Hugo Cards" />
+<meta property="og:site_name" content="Psychological Health And Methods" />
 
 
 
@@ -52,7 +52,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Hugo Cards</a>
+      <a class="navbar-brand" href="/">Psychological Health And Methods</a>
     </div>
 
     
