--- a/public/pages/about/index.html
+++ b/public/pages/about/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>About - Hugo Cards</title>
+<title>About - Psychological Health And Methods</title>
 <meta name="description" content="Hugo cards is a Bootstrap based theme ported from the Jekyll theme Webjeda-cards. Any Bootstrap element can be used in the theme.
 For more themes, visit Hugo Themes
 Does the theme deserve a star?
@@ -20,19 +20,19 @@ Star"/>
 For more themes, visit Hugo Themes
 Does the theme deserve a star?
 Star" />
-<meta name="twitter:title" content="About - Hugo Cards" />
+<meta name="twitter:title" content="About - Psychological Health And Methods" />
 <meta name="twitter:site" content="http://twitter.com/bul_ikana" />
 <meta name="twitter:creator" content="http://twitter.com/bul_ikana" />
 
 
 <meta property="og:type" content="article" />
-<meta content="About - Hugo Cards" property="og:title">
+<meta content="About - Psychological Health And Methods" property="og:title">
 <meta content="Hugo cards is a Bootstrap based theme ported from the Jekyll theme Webjeda-cards. Any Bootstrap element can be used in the theme.
 For more themes, visit Hugo Themes
 Does the theme deserve a star?
 Star" property="og:description">
 <meta property="og:url" content="/pages/about/" />
-<meta property="og:site_name" content="Hugo Cards" />
+<meta property="og:site_name" content="Psychological Health And Methods" />
 
 
 
@@ -77,7 +77,7 @@ Star" property="og:description">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Hugo Cards</a>
+      <a class="navbar-brand" href="/">Psychological Health And Methods</a>
     </div>
 
     
