--- a/public/methods/third/index.html
+++ b/public/methods/third/index.html
@@ -120,10 +120,10 @@
                         
                         <div class="row post-top-meta">
                             <div class="col-xs-12 col-md-3 col-lg-2 text-center text-md-left mb-4 mb-md-0 md-nopad-right">
-                                <img class="author-thumb" src="/images/author.png" alt="John Doe">
+                                <img class="author-thumb" src="/images/logo.png" alt="PHAM">
                             </div>
                             <div class="col-xs-12 col-md-9 col-lg-10 text-center text-md-left md-nopad-left">
-                                <a target="_blank" class="link-dark">John Doe</a><br>
+                                <a target="_blank" class="link-dark">PHAM</a><br>
                                 <span class="author-description">
                                     Creator of this blog.<br>
                                     <i class="far fa-star"></i>
